[package]
name = "mud"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "mud"
path = "server/src/main.rs"

[dependencies]
env_logger = "0.8.4"
futures-util = "0.3"
lazy_static = "1.4"
log = "0.4.0"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
tokio = { version = "1.15.0", features = ["full"] }
warp = { version = "0.3.2", features = ["websocket"] }
